--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -21,8 +21,7 @@
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
-<!-- this is PT Serif that I am importing from google -->
-<link href="https://fonts.googleapis.com/css?family=Thasadith" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
 <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
 
@@ -127,7 +126,8 @@
             <div class="row">
               <div class="col">
                 <div class="skill-mf">
-                  <p class="title-s">Education: </p>
+                  
+                  <p class="title-s"><i class="ion-university"></i> Education: </p>
                   <span> <strong> Bachelors in Business Information Systems Management - December 2017 </strong></span> 
                   <span><p>Fairmont State University, Fairmont, West Virginia</p></span>
                   <!-- <span class="pull-right">100%</span> -->
@@ -135,7 +135,7 @@
                     <div class="progress-bar bg-success" role="progressbar" style="width: 100%;" aria-valuenow="85" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-
+                  
                   <span><Strong>Masters in Cyber Security - August 2019</Strong></span> 
                   <span> <p> West Virginia Univeristy, Morgantown, West Virginia</p></span>
                   <!-- <span class="pull-right">100%</span> -->
@@ -173,10 +173,49 @@
         <div class="col-md-4">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-monitor"></i></span>
+              <span class="ico-circle"><i class="devicon-linux-plain colored"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">System Administrator</h2>
+              <h2 class="s-title">Linux</h2>
+              <p class="s-description text-center">
+                I love linux. I have over 5 years of experience with linux both in my work and personal life
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="devicon-java-plain colored"></i></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">Java</h2>
+              <p class="s-description text-center">
+                What can I say I love java too.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="devicon-python-plain colored"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">Python</h2>
+              <p class="s-description text-center">
+                My go to scripting language is python
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="devicon-html5-plain colored"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">HTML5</h2>
               <p class="s-description text-center">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                 provident vitae! Magni
@@ -188,55 +227,10 @@
         <div class="col-md-4">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-code-working"></i></span>
+              <span class="ico-circle"><i class="devicon-css3-plain colored"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Web Development</h2>
-              <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><i class="ion-camera"></i></span>
-            </div>
-            <div class="service-content">
-              <h2 class="s-title">Photography</h2>
-              <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><i class="ion-android-phone-portrait"></i></span>
-            </div>
-            <div class="service-content">
-              <h2 class="s-title">Responsive Design</h2>
-              <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><i class="ion-paintbrush"></i></span>
-            </div>
-            <div class="service-content">
-              <h2 class="s-title">Graphic Design</h2>
+              <h2 class="s-title">css3</h2>
               <p class="s-description text-center">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                 provident vitae! Magni
@@ -275,7 +269,7 @@
               <span class="ico-circle"><i class="ion-checkmark-round"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">450</p>
+              <p class="counter">15</p>
               <span class="counter-text">WORKS COMPLETED</span>
             </div>
           </div>
@@ -286,7 +280,7 @@
               <span class="ico-circle"><i class="ion-ios-calendar-outline"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">15</p>
+              <p class="counter">5</p>
               <span class="counter-text">YEARS OF EXPERIENCE</span>
             </div>
           </div>
