Added images and other necessary items. Editing peoples testomony

--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -240,10 +240,10 @@
         <div class="col-md-4">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-stats-bars"></i></span>
+              <span class="ico-circle"><i class="devicon-javascript-plain colored"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Marketing Services</h2>
+              <h2 class="s-title">Javascript</h2>
               <p class="s-description text-center">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                 provident vitae! Magni
@@ -267,8 +267,8 @@
               <span class="ico-circle"><i class="ion-checkmark-round"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">6</p>
-              <span class="counter-text">FINISHED PROJECTS</span>
+              <p class="counter">5</p>
+              <span class="counter-text">YEARS OF EXPERIENCE AS SYSADMIN</span>
             </div>
           </div>
         </div>
@@ -278,8 +278,8 @@
               <span class="ico-circle"><i class="ion-ios-calendar-outline"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">5</p>
-              <span class="counter-text">YEARS OF EXPERIENCE</span>
+              <p class="counter">3</p>
+              <span class="counter-text">YEARS OF EXPERIENCE AS DEVELOPER</span>
             </div>
           </div>
         </div>
@@ -289,8 +289,8 @@
               <span class="ico-circle"><i class="ion-ios-people"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">550</p>
-              <span class="counter-text">TOTAL CLIENTS</span>
+              <p class="counter">7</p>
+              <span class="counter-text">FINISHED PROJECTS</span>
             </div>
           </div>
         </div>
@@ -300,8 +300,8 @@
               <span class="ico-circle"><i class="ion-ribbon-a"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">36</p>
-              <span class="counter-text">AWARD WON</span>
+              <p class="counter">1.5</p>
+              <span class="counter-text">YEARS OF EXPERIENCE AS FORENSIC ANALYST</span>
             </div>
           </div>
         </div>
@@ -485,13 +485,12 @@
           <div id="testimonial-mf" class="owl-carousel owl-theme">
             <div class="testimonial-box">
               <div class="author-test">
-                <img src="img/testimonial-2.jpg" alt="" class="rounded-circle b-shadow-a">
-                <span class="author">Xavi Alonso</span>
+                <img src="img/craig_corkrean.jpg" alt="" class="rounded-circle mx-auto d-block w-25 h-25 img-thumbnail">
+                <span class="author">Craig Corkrean</span>
               </div>
               <div class="content-test">
                 <p class="description lead">
-                  Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet,
-                  consectetur adipiscing elit.
+                  Tushar is the most awesomest person alive
                 </p>
                 <span class="comit"><i class="fa fa-quote-right"></i></span>
               </div>
