--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Call me Tushar!</title>
+  <title>Mahbubur Rahman</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -24,6 +24,10 @@
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
 <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Bad+Script|Poiret+One" rel="stylesheet">
+
+
+<link href="https://fonts.googleapis.com/css?family=Allura|Charmonman|Parisienne|Reenie+Beanie" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
@@ -36,7 +40,7 @@
   <!--/ Nav Star /-->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll" href="#page-top">DevOps</a>
+      <a class="navbar-brand js-scroll" href="#page-top">Mahbubur Rahman</a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
 
@@ -72,7 +76,7 @@
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="intro-title mb-4">I am Mahbubur Rahman</h1>
+          <h1 class="intro-title mb-4">Call me Tushar</h1>
           <p class="intro-subtitle"><span class="text-slider-items">Full Stack Developer, Forensic Analyst</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
@@ -96,8 +100,8 @@
                   </div>
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
-                      <p><span class="title-s">Name: </span> <span>Mahbubur Rahman</span></p>
-                      <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
+                      <p><span class="title-s">Name: </span> <span>Mahbubur Rahman (Tushar)</span></p>
+                      <p><span class="title-s">Profile: </span> <span>Full Stack Developer</span></p>
                       <p><span class="title-s">Email: </span> <span>mrahman4595@gmail.com</span></p>
                       <p><span class="title-s">Phone: </span> <span>(240) 490-6943</span></p>
                     </div>
@@ -498,7 +502,7 @@
             <div class="testimonial-box">
               <div class="author-test">
                 <img src="img/testimonial-4.jpg" alt="" class="rounded-circle b-shadow-a">
-                <span class="author">Marta Socrate</span>
+                <span class="author">Dustin Winski</span>
               </div>
               <div class="content-test">
                 <p class="description lead">
@@ -561,7 +565,7 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="copyright-box">
-              <p class="copyright">&copy; Copyright <strong>DevOps</strong>. All Rights Reserved</p>
+              <p class="copyright">&copy; Copyright <strong>Mahbubur Rahman</strong>. All Rights Reserved</p>
            
             </div>
           </div>
