Removed all the images

--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -95,7 +95,7 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="img/me.jpg" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
@@ -323,7 +323,7 @@
               Portfolio
             </h3>
             <p class="subtitle-a">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              The Projects I have worked on
             </p>
             <div class="line-mf"></div>
           </div>
@@ -332,16 +332,16 @@
       <div class="row">
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-1.jpg" data-lightbox="gallery-mf">
+            <a href="http://www.google.com">
               <div class="work-img">
-                <img src="img/work-1.jpg" alt="" class="img-fluid">
+                <img src="img/me.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Lorem impsum dolor</h2>
+                    <h2 class="w-title">Forensic Lab - Evidence Tracking System</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">March 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -355,125 +355,125 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/work-2.jpg" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/work-2.jpg" alt="" class="img-fluid">
-              </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Loreda Cuno Nere</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+            <div class="work-box">
+              <a href="http://www.google.com">
+                <div class="work-img">
+                  <img src="img/me.jpg" alt="" class="img-fluid">
+                </div>
+                <div class="work-content">
+                  <div class="row">
+                    <div class="col-sm-8">
+                      <h2 class="w-title">Forensic Lab - Evidence Tracking System</h2>
+                      <div class="w-more">
+                        <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">March 2018</span>
+                      </div>
                     </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
+                    <div class="col-sm-4">
+                      <div class="w-like">
+                        <span class="ion-ios-plus-outline"></span>
+                      </div>
                     </div>
                   </div>
                 </div>
-              </div>
-            </a>
+              </a>
+            </div>
           </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/work-3.jpg" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/work-3.jpg" alt="" class="img-fluid">
+          <div class="col-md-4">
+              <div class="work-box">
+                <a href="http://www.google.com">
+                  <div class="work-img">
+                    <img src="img/me.jpg" alt="" class="img-fluid">
+                  </div>
+                  <div class="work-content">
+                    <div class="row">
+                      <div class="col-sm-8">
+                        <h2 class="w-title">Forensic Lab - Evidence Tracking System</h2>
+                        <div class="w-more">
+                          <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">March 2018</span>
+                        </div>
+                      </div>
+                      <div class="col-sm-4">
+                        <div class="w-like">
+                          <span class="ion-ios-plus-outline"></span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </a>
               </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Mavrito Lana Dere</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+            </div>
+            <div class="col-md-4">
+                <div class="work-box">
+                  <a href="http://www.google.com">
+                    <div class="work-img">
+                      <img src="img/me.jpg" alt="" class="img-fluid">
                     </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
+                    <div class="work-content">
+                      <div class="row">
+                        <div class="col-sm-8">
+                          <h2 class="w-title">Forensic Lab - Evidence Tracking System</h2>
+                          <div class="w-more">
+                            <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">March 2018</span>
+                          </div>
+                        </div>
+                        <div class="col-sm-4">
+                          <div class="w-like">
+                            <span class="ion-ios-plus-outline"></span>
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                  </div>
+                  </a>
                 </div>
               </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/work-4.jpg" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/work-4.jpg" alt="" class="img-fluid">
-              </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Bindo Laro Cado</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/work-5.jpg" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/work-5.jpg" alt="" class="img-fluid">
-              </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Studio Lena Mado</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
-                    </div>
+              <div class="col-md-4">
+                  <div class="work-box">
+                    <a href="http://www.google.com">
+                      <div class="work-img">
+                        <img src="img/me.jpg" alt="" class="img-fluid">
+                      </div>
+                      <div class="work-content">
+                        <div class="row">
+                          <div class="col-sm-8">
+                            <h2 class="w-title">Forensic Lab - Evidence Tracking System</h2>
+                            <div class="w-more">
+                              <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">March 2018</span>
+                            </div>
+                          </div>
+                          <div class="col-sm-4">
+                            <div class="w-like">
+                              <span class="ion-ios-plus-outline"></span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </a>
                   </div>
                 </div>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/work-6.jpg" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/work-6.jpg" alt="" class="img-fluid">
-              </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Studio Big Bang</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2017</span>
+                <div class="col-md-4">
+                    <div class="work-box">
+                      <a href="http://www.google.com">
+                        <div class="work-img">
+                          <img src="img/me.jpg" alt="" class="img-fluid">
+                        </div>
+                        <div class="work-content">
+                          <div class="row">
+                            <div class="col-sm-8">
+                              <h2 class="w-title">Forensic Lab - Evidence Tracking System</h2>
+                              <div class="w-more">
+                                <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">March 2018</span>
+                              </div>
+                            </div>
+                            <div class="col-sm-4">
+                              <div class="w-like">
+                                <span class="ion-ios-plus-outline"></span>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </a>
                     </div>
                   </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
         
       </div>
     </div>
@@ -506,8 +506,7 @@
               </div>
               <div class="content-test">
                 <p class="description lead">
-                  Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet,
-                  consectetur adipiscing elit.
+                  I am a robot
                 </p>
                 <span class="comit"><i class="fa fa-quote-right"></i></span>
               </div>
