Added other necessary icons

--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -332,21 +332,21 @@
       <div class="row">
         <div class="col-md-4">
           <div class="work-box">
-            <a href="http://www.google.com">
+            <a href="https://github.com/mrahman2549/GPDSpring_PD">
               <div class="work-img">
-                <img src="img/me.jpg" alt="" class="img-fluid">
+                <img src="img/granville_police_department_on_black-01.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Forensic Lab - Evidence Tracking System</h2>
+                    <h2 class="w-title">Granville PD Forensic Lab - Evidence Tracking System</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">March 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
+                      <span class="devicon-github-plain-wordmark colored"></span>
                     </div>
                   </div>
                 </div>
@@ -356,21 +356,21 @@
         </div>
         <div class="col-md-4">
             <div class="work-box">
-              <a href="http://www.google.com">
+              <a href="https://github.com/mrahman2549/WarrantGeneratorSB">
                 <div class="work-img">
-                  <img src="img/me.jpg" alt="" class="img-fluid">
+                  <img src="img/granville_police_department_on_black-01.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Forensic Lab - Evidence Tracking System</h2>
+                      <h2 class="w-title">Granville PD - Search Warrant and Arrest Warrant Generator</h2>
                       <div class="w-more">
                         <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">March 2018</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
                       <div class="w-like">
-                        <span class="ion-ios-plus-outline"></span>
+                        <span class="devicon-github-plain-wordmark colored"></span>
                       </div>
                     </div>
                   </div>
@@ -380,21 +380,21 @@
           </div>
           <div class="col-md-4">
               <div class="work-box">
-                <a href="http://www.google.com">
+                <a href="https://github.com/mrahman2549/GPDSMSQuery">
                   <div class="work-img">
-                    <img src="img/me.jpg" alt="" class="img-fluid">
+                    <img src="img/granville_police_department_on_black-01.jpg" alt="" class="img-fluid">
                   </div>
                   <div class="work-content">
                     <div class="row">
                       <div class="col-sm-8">
-                        <h2 class="w-title">Forensic Lab - Evidence Tracking System</h2>
+                        <h2 class="w-title">Granville PD Forensic Lab - sms Query System</h2>
                         <div class="w-more">
                           <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">March 2018</span>
                         </div>
                       </div>
                       <div class="col-sm-4">
                         <div class="w-like">
-                          <span class="ion-ios-plus-outline"></span>
+                          <span class="devicon-github-plain-wordmark colored"></span>
                         </div>
                       </div>
                     </div>
@@ -406,19 +406,19 @@
                 <div class="work-box">
                   <a href="http://www.google.com">
                     <div class="work-img">
-                      <img src="img/me.jpg" alt="" class="img-fluid">
+                      <img src="img/granville_police_department_on_black-01.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="work-content">
                       <div class="row">
                         <div class="col-sm-8">
-                          <h2 class="w-title">Forensic Lab - Evidence Tracking System</h2>
+                          <h2 class="w-title">Town of Granville - Public Works Workorder</h2>
                           <div class="w-more">
                             <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">March 2018</span>
                           </div>
                         </div>
                         <div class="col-sm-4">
                           <div class="w-like">
-                            <span class="ion-ios-plus-outline"></span>
+                            <span class="devicon-github-plain-wordmark colored"></span>
                           </div>
                         </div>
                       </div>
@@ -430,19 +430,19 @@
                   <div class="work-box">
                     <a href="http://www.google.com">
                       <div class="work-img">
-                        <img src="img/me.jpg" alt="" class="img-fluid">
+                        <img src="img/granville_police_department_on_black-01.jpg" alt="" class="img-fluid">
                       </div>
                       <div class="work-content">
                         <div class="row">
                           <div class="col-sm-8">
-                            <h2 class="w-title">Forensic Lab - Evidence Tracking System</h2>
+                            <h2 class="w-title">Granville PD - Case Record</h2>
                             <div class="w-more">
-                              <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">March 2018</span>
+                              <span class="w-ctegory">.NET Framework</span> / <span class="w-date">March 2018</span>
                             </div>
                           </div>
                           <div class="col-sm-4">
                             <div class="w-like">
-                              <span class="ion-ios-plus-outline"></span>
+                              <span class="devicon-github-plain-wordmark colored"></span>
                             </div>
                           </div>
                         </div>
@@ -454,7 +454,7 @@
                     <div class="work-box">
                       <a href="http://www.google.com">
                         <div class="work-img">
-                          <img src="img/me.jpg" alt="" class="img-fluid">
+                          <img src="img/granville_police_department_on_black-01.jpg" alt="" class="img-fluid">
                         </div>
                         <div class="work-content">
                           <div class="row">
@@ -466,7 +466,7 @@
                             </div>
                             <div class="col-sm-4">
                               <div class="w-like">
-                                <span class="ion-ios-plus-outline"></span>
+                                <span class="devicon-github-plain-wordmark colored"></span>
                               </div>
                             </div>
                           </div>
