Added and updated. now need to fix the texts

--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -404,7 +404,7 @@
             </div>
             <div class="col-md-4">
                 <div class="work-box">
-                  <a href="http://www.google.com">
+                  <a href="https://github.com/mrahman2549/TOGPublicWorks">
                     <div class="work-img">
                       <img src="img/granville_police_department_on_black-01.jpg" alt="" class="img-fluid">
                     </div>
@@ -428,7 +428,7 @@
               </div>
               <div class="col-md-4">
                   <div class="work-box">
-                    <a href="http://www.google.com">
+                    <!-- <a href="http://www.google.com"> -->
                       <div class="work-img">
                         <img src="img/granville_police_department_on_black-01.jpg" alt="" class="img-fluid">
                       </div>
@@ -442,7 +442,7 @@
                           </div>
                           <div class="col-sm-4">
                             <div class="w-like">
-                              <span class="devicon-github-plain-wordmark colored"></span>
+                              <span class="ion-ios-bolt"></span>
                             </div>
                           </div>
                         </div>
@@ -452,7 +452,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="work-box">
-                      <a href="http://www.google.com">
+                      <!-- <a href="http://www.google.com"> -->
                         <div class="work-img">
                           <img src="img/granville_police_department_on_black-01.jpg" alt="" class="img-fluid">
                         </div>
@@ -466,7 +466,7 @@
                             </div>
                             <div class="col-sm-4">
                               <div class="w-like">
-                                <span class="devicon-github-plain-wordmark colored"></span>
+                                <span class="ion-ios-bolt"></span>
                               </div>
                             </div>
                           </div>
@@ -539,7 +539,7 @@
                       If you would like to get in touch with me I've included my contact information below.
                     </p>
                     <ul class="list-ico">
-                      <li><span class="ion-ios-location"></span> West Virginia</li>
+                      <li><span class="ion-ios-location"></span> Fairmont, West Virginia</li>
                       <li><span class="ion-ios-telephone"></span> (240) 490-6943</li>
                       <li><span class="ion-email"></span> mrahman4595@gmail.com</li>
                     </ul>
