--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -494,7 +494,7 @@
               </div>
               <div class="content-test">
                 <p class="description lead">
-                  Tushar is the most awesomest person alive
+                  Oh boy my furt smells so bad!
                 </p>
                 <span class="comit"><i class="fa fa-quote-right"></i></span>
               </div>
@@ -506,7 +506,7 @@
               </div>
               <div class="content-test">
                 <p class="description lead">
-                  I am a robot
+                  I am a robot!
                 </p>
                 <span class="comit"><i class="fa fa-quote-right"></i></span>
               </div>
