--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         <div class="col-sm-3 col-lg-3">
           <div class="counter-box">
             <div class="counter-ico">
-              <span class="ico-circle"><i class="ion-checkmark-round"></i></span>
+              <span class="ico-circle"><i class="ion-ios-time"></i></span>
             </div>
             <div class="counter-num">
               <p class="counter">5</p>
@@ -279,7 +279,7 @@
         <div class="col-sm-3 col-lg-3">
           <div class="counter-box pt-4 pt-md-0">
             <div class="counter-ico">
-              <span class="ico-circle"><i class="ion-ios-calendar-outline"></i></span>
+              <span class="ico-circle"><i class="ion-ios-time"></i></span>
             </div>
             <div class="counter-num">
               <p class="counter">3</p>
@@ -290,7 +290,7 @@
         <div class="col-sm-3 col-lg-3">
           <div class="counter-box pt-4 pt-md-0">
             <div class="counter-ico">
-              <span class="ico-circle"><i class="ion-ios-people"></i></span>
+              <span class="ico-circle"><i class="ion-checkmark-round"></i></span>
             </div>
             <div class="counter-num">
               <p class="counter">7</p>
@@ -301,7 +301,7 @@
         <div class="col-sm-3 col-lg-3">
           <div class="counter-box pt-4 pt-md-0">
             <div class="counter-ico">
-              <span class="ico-circle"><i class="ion-ribbon-a"></i></span>
+              <span class="ico-circle"><i class="ion-ios-time"></i></span>
             </div>
             <div class="counter-num">
               <p class="counter">1.5</p>
@@ -406,7 +406,7 @@
                 <div class="work-box">
                   <a href="https://github.com/mrahman2549/TOGPublicWorks">
                     <div class="work-img">
-                      <img src="img/granville_police_department_on_black-01.jpg" alt="" class="img-fluid">
+                      <img src="img/town-of-granville-sign-1024x574.png" alt="" class="img-fluid">
                     </div>
                     <div class="work-content">
                       <div class="row">
