About me page that Amanda worked on

--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
                     </h5>
                   </div>
                   <p>
-                   I'm a developer and forensic analyst at Granville Police Department. I believe in the power of programming to innovate the way we solve the complex problems. I'm always looking for new projects 
-                  </p>
+                  As a developer and forensic analyst, it's my job to find problems and build solutions. For fun, however, I look for more! A great entrepraneur sells you a solution for the problem you didn't realize you had. I can't stop, because each new project is an exciting doorway to discovering the most innovative solutions available. And while the 'move fast and break things' mantra doesn't fly so well at the police department, I've got plenty of experience breaking (and fixing) things in my personal lab.                  </p>
                  
                 </div>
               </div>
