Updated my masters program name

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   <span> <strong> Bachelor of Science in Business Information Systems Management - December 2017 </strong></span> 
                   <span><p>Fairmont State University, Fairmont, West Virginia</p></span>
                   
-                  <span><Strong>Master of Business in Cyber Security - August 2019</Strong></span> 
+                  <span><Strong>Master of Science in Cyber Security - August 2019</Strong></span> 
                   <span> <p> West Virginia Univeristy, Morgantown, West Virginia</p></span>
 
             
