Added download my resume button

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="table-cell">
         <div class="container">
           <h1 class="intro-title mb-4">Call me Tushar</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Full Stack Developer, Forensic Analyst</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Full Stack Developer, Forensic Analyst, Database Administrator</span><strong class="text-slider"></strong></p>
         </div>
       </div>
     </div>
@@ -856,6 +856,12 @@
                       <li><a href=""><span class="ico-circle"><i class="ion-social-pinterest"></i></span></a></li>
                     </ul>
                   </div>
+
+                  <div class="download">
+                    <a href="" class="btn btn-primary btn-lg"><i class="fa fa-download"> Download my Resume</i></a>
+                    <!-- <button class="btn btn-primary btn-lg"><i class="fa fa-download"> Download my Resume</i></button> -->
+                  </div>
+
                 </div>
               </div>
             </div>
