--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/lettert.png" rel="icon">
+  
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -564,7 +564,7 @@
   </section>
   <!--/ Section Services End /-->
 
-  <div class="section-counter paralax-mf bg-image" style="background-image: url(img/counters-bg.jpg)">
+  <div class="section-counter paralax-mf bg-image" style="background-image: url(img/chicago.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
@@ -858,7 +858,7 @@
                   </div>
 
                   <div class="download">
-                    <a href="" class="btn btn-primary btn-lg"><i class="fa fa-download"> Download my Resume</i></a>
+                    <a href="files/Resume- Software Engineer.pdf" class="btn btn-primary btn-lg"><i class="fa fa-download"> Download my Resume</i></a>
                     <!-- <button class="btn btn-primary btn-lg"><i class="fa fa-download"> Download my Resume</i></button> -->
                   </div>
 
