--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="table-cell">
         <div class="container">
           <h1 class="intro-title mb-4">Call me Tushar</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Full Stack Developer, Forensic Analyst, Database Administrator</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Full Stack Developer, Forensic Analyst, Database Administrator, Part time Freelancer</span><strong class="text-slider"></strong></p>
         </div>
       </div>
     </div>
@@ -781,45 +781,7 @@
       </div>
     </div>
   </section>
-  <!--/ Section Portfolio End /-->
-
-  <!--/ Section Testimonials Star /-->
-  <div class="testimonials paralax-mf bg-image" style="background-image: url(img/overlay-bg.jpg)">
-    <div class="overlay-mf"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div id="testimonial-mf" class="owl-carousel owl-theme">
-            <div class="testimonial-box">
-              <div class="author-test">
-                <img src="img/craig_corkrean.jpg" alt="" class="rounded-circle mx-auto d-block w-25 h-25 img-thumbnail">
-                <span class="author">Craig Corkrean</span>
-                
-              </div>
-              <div class="content-test">
-                <p class="description lead">
-                  ...
-                </p>
-                <span class="comit"><i class="fa fa-quote-right"></i></span>
-              </div>
-            </div>
-            <div class="testimonial-box">
-              <div class="author-test">
-                <img src="img/testimonial-4.jpg" alt="" class="rounded-circle b-shadow-a">
-                <span class="author">Dustin Winski</span>
-              </div>
-              <div class="content-test">
-                <p class="description lead">
-                  ...
-                </p>
-                <span class="comit"><i class="fa fa-quote-right"></i></span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+<!-- end of projects -->
 
   
 
@@ -835,7 +797,7 @@
                 <div class="col">
                   <div class="title-box-2 pt-4 pt-md-0">
                     <h5 class="title-left">
-                      Get in Touch
+                      Get hold of me
                     </h5>
                   </div>
                   <div class="more-info">
