Added comments for each projects and disabled the link to the github repo

--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
               Projects
             </h3>
             <p class="subtitle-a">
-              Due to the nature of some of the projects I can't display all my projects publicly but here are a few that you can check out
+              Due to the nature of the projects I can't display my codes here
             </p>
             <div class="line-mf"></div>
           </div>
@@ -635,7 +635,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="work-box">
-            <a href="https://github.com/mrahman2549/GPDSpring_PD">
+            <!-- <a href="https://github.com/mrahman2549/GPDSpring_PD"> -->
               <div class="work-img">
                 <img src="img/granville_police_department_on_black-01.jpg" alt="" class="img-fluid">
               </div>
@@ -644,7 +644,8 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Granville PD Forensic Lab - Evidence Tracking System</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">March 2018</span>
+                      <p>Full-stack web development with Springboot framework. Increased the effeiency of the forensics lab by 300%. System tracks all the digital evidence and notifies user automatically of all the changes</p>
+                      <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">February 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -659,7 +660,7 @@
         </div>
         <div class="col-md-4">
             <div class="work-box">
-              <a href="https://github.com/mrahman2549/WarrantGeneratorSB">
+              <!-- <a href="https://github.com/mrahman2549/WarrantGeneratorSB"> -->
                 <div class="work-img">
                   <img src="img/granville_police_department_on_black-01.jpg" alt="" class="img-fluid">
                 </div>
@@ -668,7 +669,8 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Granville PD - Search Warrant and Arrest Warrant Generator</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">March 2018</span>
+                        <p>System keeps track of all the previous warrants officers have generated. Reduced confusions and increased efficiency by 40%</p>
+                        <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">August 2018</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -683,7 +685,7 @@
           </div>
           <div class="col-md-4">
               <div class="work-box">
-                <a href="https://github.com/mrahman2549/GPDSMSQuery">
+                <!-- <a href="https://github.com/mrahman2549/GPDSMSQuery"> -->
                   <div class="work-img">
                     <img src="img/granville_police_department_on_black-01.jpg" alt="" class="img-fluid">
                   </div>
@@ -692,7 +694,8 @@
                       <div class="col-sm-8">
                         <h2 class="w-title">Granville PD Forensic Lab - sms Query System</h2>
                         <div class="w-more">
-                          <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">March 2018</span>
+                          <p>Integrated Twilio API. Allows officers from other Departments to get live status about their cases</p>
+                          <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">September 2018</span>
                         </div>
                       </div>
                       <div class="col-sm-4">
@@ -707,7 +710,7 @@
             </div>
             <div class="col-md-4">
                 <div class="work-box">
-                  <a href="https://github.com/mrahman2549/TOGPublicWorks">
+                  <!-- <a href="https://github.com/mrahman2549/TOGPublicWorks"> -->
                     <div class="work-img">
                       <img src="img/town-of-granville-sign-1024x574.png" alt="" class="img-fluid">
                     </div>
@@ -716,7 +719,8 @@
                         <div class="col-sm-8">
                           <h2 class="w-title">Town of Granville - Public Works Workorder</h2>
                           <div class="w-more">
-                            <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">March 2018</span>
+                            <p>Town's first digital ticketing system for public works</p>
+                            <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">May 2018</span>
                           </div>
                         </div>
                         <div class="col-sm-4">
@@ -740,7 +744,8 @@
                           <div class="col-sm-8">
                             <h2 class="w-title">Granville PD - Case Record</h2>
                             <div class="w-more">
-                              <span class="w-ctegory">.NET Framework</span> / <span class="w-date">March 2018</span>
+                              <p>Project collected all the paper documents from 2006-2010 and stored it in local MS-SQL server with frontend web application to access them</p>
+                              <span class="w-ctegory">.NET Framework</span> / <span class="w-date">May 2018</span>
                             </div>
                           </div>
                           <div class="col-sm-4">
@@ -762,9 +767,11 @@
                         <div class="work-content">
                           <div class="row">
                             <div class="col-sm-8">
-                              <h2 class="w-title">Forensic Lab - Evidence Tracking System</h2>
+                              <h2 class="w-title">Granville PD - Evidence Inventory System</h2>
                               <div class="w-more">
-                                <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">March 2018</span>
+                                  <p>This project allowed the Records officer to keep track of individual evidence and their whereabouts in the legal chain</p>
+                                <span class="w-ctegory">.NET Framework</span> / <span class="w-date">January 2018</span>
+                                
                               </div>
                             </div>
                             <div class="col-sm-4">
