Added comment to the section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
   <title>Mahbubur Rahman</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
-  <meta content="" name="description">
+  <meta content="This is my site to present myself to the world. I think this is normal right? I mean I am bragging here about what I know and what not in order to someday get my dream job lol" name="description">
+  <meta property="og:site_name" content="callmetushar" />
+
+
+
+
+  <!-- Hi there. Stranger. Yes you who clicked on the source code to see whats under the skin. You must know your stuff or ... just accidently clicked on that. But either way feel free to look around my site. ;) -->
+
+
+
 
   <!-- Favicons -->
   <link href="img/lettert.png" rel="icon">
