Fixed spelling error

--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
                       About me
                     </h5>
                   </div>
-                  <p>
-                  Appreantly a lot of people find it super hard to pronounce my name so just call me by my nickname <strong>Tushar</strong>. As a developer and forensic analyst, it's my job to find problems and build solutions. For fun, however, I look for more! A great entrepraneur sells you a solution for the problem you didn't realize you had. I can't stop, because each new project is an exciting doorway to discovering the most innovative solutions available. And while the 'move fast and break things' mantra doesn't fly so well at the police department, I've got plenty of experience breaking (and fixing) things in my personal lab.                  </p>
+                  <p>Apparently a lot of people find it super hard to pronounce my name so just call me by my nickname <strong>Tushar</strong>. As a developer and forensic analyst, it's my job to find problems and build solutions. For fun, however, I look for more! A great entrepraneur sells you a solution for the problem you didn't realize you had. I can't stop, because each new project is an exciting doorway to discovering the most innovative solutions available. And while the 'move fast and break things' mantra doesn't fly so well at the police department, I've got plenty of experience breaking (and fixing) things in my personal lab.                  </p>
                  
                 </div>
               </div>
